UC#7 Create complex unit tests